<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_figure"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/shapeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/triangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />

        <RadioButton
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <RadioButton
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_value_radius_or_side" />

    <EditText
        android:id="@+id/inputValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="5.5"
        android:hint="@string/e_g_5_5"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:id="@+id/checkArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area" />

    <CheckBox
        android:id="@+id/checkPerimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perimeter" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ok" />

</LinearLayout>